# codebase-assistant

./: .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  worker.py
backend/app/api/: routes.py  runtime.py
backend/app/auth/: cli.py  dependencies.py  store.py  tokens.py
backend/app/chat/: store.py  streaming.py
backend/app/chunking/: chunker.py
backend/app/core/: config.py  errors.py
backend/app/db/: models.py
backend/app/evaluation/: __init__.py  golden.py
backend/app/files/: browser.py
backend/app/indexing/: embeddings.py  indexer.py  keyword_index.py  vector_store.py
backend/app/ingestion/: filtering.py  github.py  refresh.py
backend/app/jobs/: ingestion.py  initial_ingestion.py  queue.py
backend/app/llm/: openrouter.py  openrouter_headers.py
backend/app/retrieval/: answering.py
backend/tests/: conftest.py  test_answering.py  test_api_surface.py  test_auth_cli.py  test_auth_guard.py  test_auth_login.py  test_auth_passwords.py  test_auth_store.py  test_auth_tokens.py  test_chat_streaming.py  test_chunking.py  test_file_filtering.py  test_github_ingestion.py  test_golden_evaluation.py  test_incremental_refresh.py  test_indexing.py  test_openrouter_providers.py  test_smoke.py
docs/: backend-smoke.md
docs/evaluation/: golden-evaluation-report.md
docs/issues/: codebase-chat-assistant-issues.md
docs/prd/: codebase-chat-assistant-prd.md
frontend/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.ts  main.tsx  styles.css
frontend/src/components/: Login.tsx
plans/: 001-remove-noop-openrouter-cache-header.md  002-persist-chat-turns-after-success.md  003-fix-keyword-hit-scoring.md  004-push-vector-search-into-store.md  005-fail-refresh-job-on-any-error.md  006-retry-transient-provider-failures.md  007-index-chat-hot-path-columns.md  008-self-hosted-auth.md  README.md
